# serializer version: 1
# name: test_gt_color_box_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right"><div>
              <div style="min-height:20px; min-width:70px;background-color:#00000033; display:flex; border-radius:5px;align-items:center; padding:0px 7.0px;">
                  <div style="height:13.0px; width:13.0px;background-color:#000000; display:flex; border-radius:4px;"></div>
                  <div style="line-height:20px; margin-left: 7.0px;font-weight:normal; white-space:nowrap;">0.1111</div>
              </div>
          </div></td>
      <td class="gt_row gt_left">apricot</td>
      <td class="gt_row gt_left">one</td>
      <td class="gt_row gt_right">2015-01-15</td>
      <td class="gt_row gt_right">13:35</td>
      <td class="gt_row gt_right">2018-01-01 02:22</td>
      <td class="gt_row gt_right">49.95</td>
      <td class="gt_row gt_left">row_1</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right"><div>
              <div style="min-height:20px; min-width:70px;background-color:#63253033; display:flex; border-radius:5px;align-items:center; padding:0px 7.0px;">
                  <div style="height:13.0px; width:13.0px;background-color:#632530; display:flex; border-radius:4px;"></div>
                  <div style="line-height:20px; margin-left: 7.0px;font-weight:normal; white-space:nowrap;">2.222</div>
              </div>
          </div></td>
      <td class="gt_row gt_left">banana</td>
      <td class="gt_row gt_left">two</td>
      <td class="gt_row gt_right">2015-02-15</td>
      <td class="gt_row gt_right">14:40</td>
      <td class="gt_row gt_right">2018-02-02 14:33</td>
      <td class="gt_row gt_right">17.95</td>
      <td class="gt_row gt_left">row_2</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right"><div>
              <div style="min-height:20px; min-width:70px;background-color:#9e9e9e33; display:flex; border-radius:5px;align-items:center; padding:0px 7.0px;">
                  <div style="height:13.0px; width:13.0px;background-color:#9e9e9e; display:flex; border-radius:4px;"></div>
                  <div style="line-height:20px; margin-left: 7.0px;font-weight:normal; white-space:nowrap;">33.33</div>
              </div>
          </div></td>
      <td class="gt_row gt_left">coconut</td>
      <td class="gt_row gt_left">three</td>
      <td class="gt_row gt_right">2015-03-15</td>
      <td class="gt_row gt_right">15:45</td>
      <td class="gt_row gt_right">2018-03-03 03:44</td>
      <td class="gt_row gt_right">1.39</td>
      <td class="gt_row gt_left">row_3</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_data_color_by_group_multiple_groups_snap[pd_and_pl]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">1</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">2</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_right">3</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">4</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #25bce6;" class="gt_row gt_right">5</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_right">6</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_highlight_cols_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">0.1111</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">apricot</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">one</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">2015-01-15</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">13:35</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">2018-01-01 02:22</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">49.95</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">row_1</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">2.222</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">banana</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">two</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">2015-02-15</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">14:40</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">2018-02-02 14:33</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">17.95</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">row_2</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">33.33</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">coconut</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">three</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">2015-03-15</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">15:45</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">2018-03-03 03:44</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">1.39</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">row_3</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">grp_a</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_highlight_rows_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">0.1111</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">apricot</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">one</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">2015-01-15</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">13:35</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">2018-01-01 02:22</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">49.95</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">row_1</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">2.222</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">banana</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">two</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">2015-02-15</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">14:40</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">2018-02-02 14:33</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_right">17.95</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">row_2</td>
      <td style="background-color: #80bcd8; border-top: 1px solid #80bcd8;border-bottom: 1px solid #80bcd8;border-left: 1px solid #80bcd8;border-right: 1px solid #80bcd8; color: #000000;font-weight: normal;" class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td class="gt_row gt_left">three</td>
      <td class="gt_row gt_right">2015-03-15</td>
      <td class="gt_row gt_right">15:45</td>
      <td class="gt_row gt_right">2018-03-03 03:44</td>
      <td class="gt_row gt_right">1.39</td>
      <td class="gt_row gt_left">row_3</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_hulk_col_numeric_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #40004b;" class="gt_row gt_right">0.1111</td>
      <td style="color: #FFFFFF; background-color: #40004b;" class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #40004b;" class="gt_row gt_left">one</td>
      <td style="color: #FFFFFF; background-color: #40004b;" class="gt_row gt_right">2015-01-15</td>
      <td style="color: #FFFFFF; background-color: #40004b;" class="gt_row gt_right">13:35</td>
      <td style="color: #FFFFFF; background-color: #40004b;" class="gt_row gt_right">2018-01-01 02:22</td>
      <td style="color: #FFFFFF; background-color: #00441b;" class="gt_row gt_right">49.95</td>
      <td style="color: #FFFFFF; background-color: #40004b;" class="gt_row gt_left">row_1</td>
      <td style="color: #FFFFFF; background-color: #40004b;" class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #621b6f;" class="gt_row gt_right">2.222</td>
      <td style="color: #000000; background-color: #f7f7f7;" class="gt_row gt_left">banana</td>
      <td style="color: #000000; background-color: #f7f7f7;" class="gt_row gt_left">two</td>
      <td style="color: #000000; background-color: #f7f7f7;" class="gt_row gt_right">2015-02-15</td>
      <td style="color: #000000; background-color: #f7f7f7;" class="gt_row gt_right">14:40</td>
      <td style="color: #000000; background-color: #f7f7f7;" class="gt_row gt_right">2018-02-02 14:33</td>
      <td style="color: #000000; background-color: #d1b8d9;" class="gt_row gt_right">17.95</td>
      <td style="color: #000000; background-color: #f7f7f7;" class="gt_row gt_left">row_2</td>
      <td style="color: #FFFFFF; background-color: #40004b;" class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #00441b;" class="gt_row gt_right">33.33</td>
      <td style="color: #FFFFFF; background-color: #00441b;" class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #00441b;" class="gt_row gt_left">three</td>
      <td style="color: #FFFFFF; background-color: #00441b;" class="gt_row gt_right">2015-03-15</td>
      <td style="color: #FFFFFF; background-color: #00441b;" class="gt_row gt_right">15:45</td>
      <td style="color: #FFFFFF; background-color: #00441b;" class="gt_row gt_right">2018-03-03 03:44</td>
      <td style="color: #FFFFFF; background-color: #40004b;" class="gt_row gt_right">1.39</td>
      <td style="color: #FFFFFF; background-color: #00441b;" class="gt_row gt_left">row_3</td>
      <td style="color: #FFFFFF; background-color: #40004b;" class="gt_row gt_left">grp_a</td>
    </tr>
  </tbody>
  '''
# ---
